datatypes in JS

--- a/index.html
+++ b/index.html
@@ -1,22 +1,19 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
-        <title>web page</title>
-        
+        <meta charset="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Document</title>
+
     </head>
     <body>
-        <a href="profile.html" target="">linkpage</a>
-        <b>helo</b><br>
-        <strong>helo</strong>
-        <h1>hii</h1>
-        <h5>hiii</h5>
-        <h6>hii</h6>
-        10<sup>9</sup><br>
-        <mark>fdfgf</mark><br>
-        H<sub>2</sub>
+        <p> lorem...</p>
+        <script src="func and blocks.js"></script>
 
-        <u>think</u><br>
-        <em>emphasis</em><br>
-        <i>italic</i>
     </body>
 </html>
+
+
+3 js
+1 js datatype type of
+1 js perform hoisting for 10 var
+1 js assign different values
